<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ghh0stex.androiddialogs.MainActivity">

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="22sp">
    </TextView>

    <Button
        android:text="@string/timePickerDialog"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonTimePickerDialog"
        android:onClick="onclickTime"
        android:layout_below="@+id/tvTime"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/date"
        android:textSize="22sp"
        android:layout_below="@+id/buttonTimePickerDialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </TextView>

    <Button
        android:text="@string/datePickerDialog"
        android:layout_width="match_parent"
        android:id="@+id/buttonDatePickerDialog"
        android:onClick="onclickDate"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:onClick="onclickAlert"
        android:layout_below="@+id/buttonDatePickerDialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </Button>

    <Button
        android:id="@+id/btnDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Default"
        android:onClick="onclickProgressDialog"
        android:layout_below="@+id/btnExit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </Button>

    <Button
        android:id="@+id/btnHoriz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal"
        android:onClick="onclickProgressDialog"
        android:layout_below="@+id/btnDefault"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </Button>

</RelativeLayout>
